# fd5

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  justfile  justfile.project  main.py  pyproject.toml  white-paper.md
.cursor/: sandbox.json
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  justfile.base  justfile.gh  justfile.worktree
.devcontainer/scripts/: gh_issues.py  init-git.sh  init-precommit.sh  initialize.sh  post-attach.sh  post-create.sh  post-start.sh  setup-git-conf.sh  setup-tailscale.sh  verify-auth.sh
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml  (+2 more)
benchmarks/: README.md  bench_create.py  bench_hash.py  bench_manifest.py  bench_validate.py  run_all.py
docs/: tailscale-devcontainer.md
h5v/: .gitignore  Cargo.toml  README.md
h5v/scripts/: make_big_dataeset_file.py  make_code_datasets.py  make_high_dim_ds.py  make_internal_linked_datasets.py  make_linked_datasets.py  make_long_attributes.py  make_many_grouped_h5.py  make_nan_ds.py  make_scalar_ds.py  make_table_h5.py  make_test_h5.py  make_test_multi_img_dset.py  make_test_var_arr.py  make_to_many_ds.py
h5v/src/: color_consts.rs  config.rs  data.rs  error.rs  h5f.rs  linking.rs  main.rs  search.rs  sprint_attributes.rs  sprint_typedesc.rs  test_helpers.rs  utils.rs
h5v/src/scripting/: README.md  chartup.rs  engine.rs  mod.rs  types.rs
h5v/src/ui/: app.rs  attributes.rs  command.rs  command_view.rs  dims.rs  help.rs  hints.rs  image_preview.rs  main_display.rs  matrix.rs  mchart.rs  mod.rs  preload.rs  preview.rs  preview_chart.rs  segment_scroll.rs  settings.rs  state.rs  std_comp_render.rs  tree_view.rs
h5v/src/ui/input/: attributes.rs  command.rs  content.rs  mchart.rs  mod.rs  search.rs  settings.rs  tree.rs
h5v/tests/: test_slice.rs
scripts/: devc-remote.sh  spike_chunk_hash.py
tests/: __init__.py  test_audit.py  test_calibration.py  test_cli.py  test_create.py  test_datacite.py  test_datalad.py  test_devc_remote_preflight.sh  test_device_data.py  test_example.py  test_h5io.py  test_hash.py  test_identity.py  test_ingest_base.py  test_ingest_cli.py  test_ingest_csv.py  test_ingest_dicom.py  test_ingest_metadata.py  test_ingest_nifti.py  test_ingest_parquet.py  test_ingest_raw.py  test_integration.py  test_listmode.py  test_manifest.py  test_migrate.py  test_naming.py  test_provenance.py  test_quality.py  test_recon.py  test_registry.py  test_rocrate.py  test_roi.py  test_schema.py  test_sim.py  test_sinogram.py  test_spectrum.py  test_transform.py  test_types.py  test_units.py
(+236 files in other folders)
