[project]
name = "fd5"
version = "0.1.0"
description = "fd5 project"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
science = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "matplotlib>=3.9",
]
all = [
    "fd5[dev,science]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fd5"]

[dependency-groups]
dev = [
    "hatchling>=1.25",
    "rich>=13.0.0",
]
