[project]
name = "fd5"
version = "0.1.0"
description = "fd5 project"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.10",
    "numpy>=2.0",
    "jsonschema>=4.20",
    "tomli-w>=1.0",
    "click>=8.0",
]

[project.scripts]
fd5 = "fd5.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "pre-commit>=4.0",
    "bandit>=1.7",
    "pip-licenses>=5.0",
]
science = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "matplotlib>=3.9",
]
all = [
    "fd5[dev,science]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fd5"]

[project.entry-points."fd5.schemas"]
recon = "fd5.imaging.recon:ReconSchema"

[dependency-groups]
dev = [
    "hatchling>=1.25",
    "rich>=13.0.0",
]
