[package]
name = "h5v"
version = "0.2.4"
edition = "2021"
authors = ["Daniel <animcuil@gmail.com>"]
description = "A terminal viewer for HDF5 files with chart, image, string, matrix, attributes support"
readme = "README.md"
repository = "https://github.com/DanielHauge/h5v"
license = "Apache-2.0"

[dependencies]
arboard = { version = "3.6.1", features = [
    "wl-clipboard-rs",
    "wayland-data-control",
] }
bktree = "1.0.1"
clap = { version = "4.5.51", features = ["derive"] }
fd5 = { path = "../crates/fd5" }
fuzzy-matcher = "0.3.7"
git-version = "0.3.9"
hdf5-metno = { workspace = true }
image = "0.25.9"
itertools = "0.14.0"
ndarray = "0.17.1"
plotters = "0.3.7"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
ratatui-image = "10.0.2"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
syntect = { version = "5.3.0", features = ["default-fancy"] }


[profile.release]
lto = "fat"     # Enable link-time optimization
panic = "abort"
